If the user or JS requests to print while the document is still loading the DV will print it in the LoadComplete Bug 137739 r=dcone sr=jst